--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "",
-  "version": "1.0.3",
+  "name": "bla",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/src/functions/*.js",
   "scripts": {
