--- a/.github/workflows/main_githubdeploy.yml
+++ b/.github/workflows/main_githubdeploy.yml
@@ -39,6 +39,11 @@ jobs:
           npm run test --if-present
           popd
 
+      - name: Configure Git identity
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
       - name: Commit build changes (if any)
         run: |
           git add -A
